fix: merchant, branch, geolocation and products
